plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.4'
	id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
	jcenter()
}

dependencies {
	// basic spring boot
	implementation 'org.springframework.boot:spring-boot-starter'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// Mockito
	testImplementation 'org.mockito:mockito-inline:5.2.0'

	// powerMock
	testImplementation 'org.powermock:powermock-module-junit4:2.0.9'
	testImplementation 'org.powermock:powermock-api-mockito2:2.0.9'
	testImplementation 'org.powermock:powermock-api-support:2.0.9'
	testImplementation 'org.powermock:powermock-core:2.0.9'
	testImplementation 'org.objenesis:objenesis:3.1'
}

tasks.named('test') {
	useJUnitPlatform()
}

test {
	jvmArgs(['--add-opens', 'java.base/java.lang=ALL-UNNAMED'])
}